--- a/style/index.css
+++ b/style/index.css
@@ -8,8 +8,18 @@
 .bokeh-BokehDashboardLauncher {
   background: var(--jp-layout-color1);
   color: var(--jp-ui-font-color1);
-  font-size: var(--jp-ui-font-size2);
+  font-size: var(--jp-ui-font-size1);
   overflow: auto;
+}
+
+.bokeh-BokehDashboardLauncher-header {
+  font-size: var(--jp-ui-font-size0);
+  padding: 8px 12px;
+  font-weight: 600;
+  border-bottom: var(--jp-border-width) solid var(--jp-border-color2);
+  letter-spacing: 1px;
+  margin: 0px;
+  text-transform: uppercase;
 }
 
 /**
@@ -26,15 +36,15 @@
 }
 
 .bokeh-DashboardListing-item {
-  margin: 16px;
+  margin: 4px 0px 4px 0px;
   width: 100%;
-  white-space: nowrap;
 }
 
 .bokeh-DashboardListing-item button {
-  font-size: var(--jp-ui-font-size0);
+  font-size: var(--jp-ui-font-size1);
   line-height: 24px;
   padding: 0px 8px;
+  width: 100%;
 }
 
 .bokeh-DashboardListing-item button.jp-mod-styled.jp-mod-accept {
@@ -70,4 +80,15 @@
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.1;
+}
+
+/**
+ * Icons
+ */
+
+[data-theme-light="true"] .bokeh-ChartIcon {
+  background-image: url(./chart-light.svg);
+}
+[data-theme-light="false"] .bokeh-ChartIcon {
+  background-image: url(./chart-dark.svg);
 }
