--- a/style/index.css
+++ b/style/index.css
@@ -25,7 +25,7 @@
 /**
  * Rules related to the dashboard launcher.
  */
-.bokeh-DashboardListing-list {
+.nvdashboardListing-list {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,19 +35,19 @@
   list-style-type: none;
 }
 
-.bokeh-DashboardListing-item {
+.nvdashboardListing-item {
   margin: 4px 0px 4px 0px;
   width: 100%;
 }
 
-.bokeh-DashboardListing-item button {
+.nvdashboardListing-item button {
   font-size: var(--jp-ui-font-size1);
   line-height: 24px;
   padding: 0px 8px;
   width: 100%;
 }
 
-.bokeh-DashboardListing-item button.jp-mod-styled.jp-mod-accept {
+.nvdashboardListing-item button.jp-mod-styled.jp-mod-accept {
   height: var(--bokeh-launch-button-height);
 }
 
@@ -76,7 +76,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(chart-light.svg);
+  background-image: url(./expansion-card-variant-light.svg);
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.1;
@@ -85,10 +85,9 @@
 /**
  * Icons
  */
-
-[data-jp-theme-light='true'] .jp-BokehChart-icon {
-  background-image: url(./chart-light.svg);
+[data-jp-theme-light='true'] .jp-GPU-icon {
+  background-image: url(./expansion-card-variant-light.svg);
 }
-[data-jp-theme-light="false"] .jp-BokehChart-icon {
-  background-image: url(./chart-dark.svg);
+[data-jp-theme-light="false"] .jp-GPU-icon {
+  background-image: url(./expansion-card-variant-dark.svg);
 }
