run eslint locally

--- a/style/base.css
+++ b/style/base.css
@@ -52,7 +52,7 @@
   width: 100%;
   border: none;
   border-top: 1px solid #ff7900;
-  margin: -8px -5px 10px 0px;
+  margin: -8px -5px 10px 0;
 }
 
 .gpu-dashboard-button {
